[tool.poetry]
name = "windowgenerator_with_sample_weight"
version = "0.1.0"
description = ""
authors = ["ktman-ktman <ktym.disk.mobile.note@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "^2.8.0"
ipykernel = "^6.12.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
mypy = "^0.942"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
